--- a/ios/Login/EmailLoginViewController.xib
+++ b/ios/Login/EmailLoginViewController.xib
@@ -10,6 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailLoginViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="LoginResultLabel" destination="2Cc-Fn-kiK" id="IIW-5v-Adu"/>
+                <outlet property="emailTextFiled" destination="lpU-ya-Iw9" id="c3a-I2-y3Q"/>
+                <outlet property="passwordTextFiled" destination="xV4-jD-XvM" id="6GK-5u-ugl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -75,6 +78,9 @@
                     <state key="normal" title="로그인">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="pressedGetMainTabVC:" destination="-1" eventType="touchUpInside" id="aE2-s7-YVL"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4C-iJ-fmx">
                     <rect key="frame" x="75" y="309" width="138" height="28"/>
@@ -102,6 +108,12 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Cc-Fn-kiK">
+                    <rect key="frame" x="0.0" y="448" width="414" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -116,13 +128,16 @@
                 <constraint firstItem="xV4-jD-XvM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="BCe-XJ-WNy"/>
                 <constraint firstItem="ae2-UM-xHF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="BLj-oI-jT0"/>
                 <constraint firstItem="xV4-jD-XvM" firstAttribute="top" secondItem="ae2-UM-xHF" secondAttribute="bottom" constant="20" id="Gxe-Up-40F"/>
+                <constraint firstItem="2Cc-Fn-kiK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="HIB-tz-fZq"/>
                 <constraint firstItem="yVG-sr-mYI" firstAttribute="leading" secondItem="M3q-lS-Lxc" secondAttribute="trailing" constant="10" id="IsO-3r-xGe"/>
                 <constraint firstItem="lpU-ya-Iw9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="73" id="JDG-GS-hf4"/>
                 <constraint firstItem="Jti-kd-iZy" firstAttribute="top" secondItem="xV4-jD-XvM" secondAttribute="bottom" id="Je5-2h-qIt"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2Cc-Fn-kiK" secondAttribute="bottom" constant="414" id="LJ8-NM-AHB"/>
                 <constraint firstItem="M3q-lS-Lxc" firstAttribute="leading" secondItem="w4C-iJ-fmx" secondAttribute="trailing" constant="9" id="QcM-6f-eHZ"/>
                 <constraint firstItem="Jti-kd-iZy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="TyA-Db-v7D"/>
                 <constraint firstItem="yVG-sr-mYI" firstAttribute="top" secondItem="IXm-so-ZCd" secondAttribute="bottom" constant="10" id="eAh-Tw-biU"/>
                 <constraint firstAttribute="trailing" secondItem="Jti-kd-iZy" secondAttribute="trailing" id="nI9-TG-z8a"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2Cc-Fn-kiK" secondAttribute="trailing" id="nzE-VQ-exA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="IXm-so-ZCd" secondAttribute="trailing" constant="75" id="sLy-AG-YX2"/>
                 <constraint firstItem="w4C-iJ-fmx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="tCs-Uz-KVb"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lpU-ya-Iw9" secondAttribute="trailing" constant="20" id="tps-36-sV0"/>
