--- a/ios/MainTab/FindingGoodRestaurant/FindingGoodRestaurantViewController.xib
+++ b/ios/MainTab/FindingGoodRestaurant/FindingGoodRestaurantViewController.xib
@@ -36,7 +36,7 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ect-F4-WbC">
                             <rect key="frame" x="0.0" y="16" width="52" height="36"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                            <state key="normal" title="성남시">
+                            <state key="normal" title="금천구">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </state>
                             <connections>
