--- a/ios/MainTab/PopUp/LocationPopup/NearViewController.xib
+++ b/ios/MainTab/PopUp/LocationPopup/NearViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NearViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="vrM-NQ-akc" id="FtA-CJ-FAg"/>
                 <outlet property="view" destination="Aox-9V-fSx" id="71P-6Q-fiZ"/>
             </connections>
         </placeholder>
@@ -44,15 +45,32 @@
                             <state key="normal" title="적용">
                                 <color key="titleColor" red="1" green="0.99998790029999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </state>
+                            <connections>
+                                <action selector="pressedSettingLocation:" destination="-1" eventType="touchUpInside" id="Q9S-RK-CfT"/>
+                            </connections>
                         </button>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="vrM-NQ-akc">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5sL-yj-ytZ">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="Xvf-EV-lpX" firstAttribute="top" secondItem="vrM-NQ-akc" secondAttribute="bottom" id="2h3-Wj-ibJ"/>
                         <constraint firstItem="2Js-Cf-eww" firstAttribute="leading" secondItem="Xvf-EV-lpX" secondAttribute="trailing" constant="98.5" id="Bnw-h9-xtB"/>
                         <constraint firstAttribute="bottom" secondItem="Xvf-EV-lpX" secondAttribute="bottom" constant="33" id="bVI-Rr-seC"/>
+                        <constraint firstItem="vrM-NQ-akc" firstAttribute="leading" secondItem="P4C-y8-Xfj" secondAttribute="leading" id="dnL-Lq-gim"/>
+                        <constraint firstItem="vrM-NQ-akc" firstAttribute="top" secondItem="P4C-y8-Xfj" secondAttribute="top" id="gGk-Xw-fib"/>
                         <constraint firstAttribute="bottom" secondItem="2Js-Cf-eww" secondAttribute="bottom" constant="34" id="iTj-VU-bKE"/>
                         <constraint firstAttribute="height" constant="360" id="kHj-nP-N5w"/>
                         <constraint firstAttribute="trailing" secondItem="2Js-Cf-eww" secondAttribute="trailing" constant="20" id="nNb-Yt-fNf"/>
+                        <constraint firstAttribute="trailing" secondItem="vrM-NQ-akc" secondAttribute="trailing" id="qiX-h9-Cvg"/>
                         <constraint firstItem="Xvf-EV-lpX" firstAttribute="centerX" secondItem="P4C-y8-Xfj" secondAttribute="centerX" id="xwS-wj-Ybe"/>
                     </constraints>
                 </view>
