--- a/ios/MainTab/FindingGoodRestaurant/CollectionViewCell.xib
+++ b/ios/MainTab/FindingGoodRestaurant/CollectionViewCell.xib
@@ -24,64 +24,64 @@
                             <action selector="presentDetailRestaurantViewController:" destination="gTV-IL-0wX" eventType="touchUpInside" id="4DY-sE-ycL"/>
                         </connections>
                     </button>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xvV-3J-zG8">
-                        <rect key="frame" x="10" y="10" width="150" height="150"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xvV-3J-zG8">
+                        <rect key="frame" x="5" y="0.0" width="160" height="150"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="150" id="H81-8j-dL5"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. 새소리물소리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4I4-l2-V2N">
-                        <rect key="frame" x="10" y="165" width="62.5" height="12"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <rect key="frame" x="5" y="155" width="81" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="금천구" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwg-4r-Hc0">
-                        <rect key="frame" x="10" y="179" width="16" height="8"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                        <rect key="frame" x="5" y="173" width="23.5" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.66666666666666663" alpha="0.73969927226027399" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5,392" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MzU-eF-Uzt">
-                        <rect key="frame" x="19" y="189" width="18" height="8"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                        <rect key="frame" x="17" y="186" width="25.5" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.66666666669999997" alpha="0.73969927229999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21.89km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQh-xb-3Um">
-                        <rect key="frame" x="28" y="179" width="26" height="8"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                        <rect key="frame" x="30.5" y="173" width="37.5" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.66666666669999997" alpha="0.73969927229999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6AR-G1-okY">
-                        <rect key="frame" x="51" y="189" width="8" height="8"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                        <rect key="frame" x="59.5" y="186" width="12" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.66666666669999997" alpha="0.73969927229999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-nv-I7H">
-                        <rect key="frame" x="138" y="165" width="22" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="139" y="155" width="26" height="21.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_eye_gray" translatesAutoresizingMaskIntoConstraints="NO" id="Q3v-qh-Css">
-                        <rect key="frame" x="10" y="189" width="7" height="7"/>
+                        <rect key="frame" x="5" y="186" width="10" height="10"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="7" id="5DI-3e-HVm"/>
-                            <constraint firstAttribute="width" constant="7" id="eZq-j9-kdz"/>
+                            <constraint firstAttribute="height" constant="10" id="5DI-3e-HVm"/>
+                            <constraint firstAttribute="width" constant="10" id="eZq-j9-kdz"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_pencil_gray" translatesAutoresizingMaskIntoConstraints="NO" id="tsX-4X-l3x">
-                        <rect key="frame" x="42" y="189" width="7" height="7"/>
+                        <rect key="frame" x="47.5" y="186" width="10" height="10"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="7" id="7Em-Ah-gCC"/>
-                            <constraint firstAttribute="width" constant="7" id="QFL-VY-olD"/>
+                            <constraint firstAttribute="height" constant="10" id="7Em-Ah-gCC"/>
+                            <constraint firstAttribute="width" constant="10" id="QFL-VY-olD"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zpG-pA-Hxi">
-                        <rect key="frame" x="136" y="25" width="15" height="15"/>
+                        <rect key="frame" x="141" y="15" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="EP7-qg-iyi"/>
                             <constraint firstAttribute="width" constant="15" id="O2j-T9-gIJ"/>
@@ -92,21 +92,21 @@
             </view>
             <constraints>
                 <constraint firstItem="8gc-nv-I7H" firstAttribute="top" secondItem="xvV-3J-zG8" secondAttribute="bottom" constant="5" id="0TP-4e-CK5"/>
-                <constraint firstItem="4I4-l2-V2N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="5Y0-ht-ErR"/>
+                <constraint firstItem="4I4-l2-V2N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="5Y0-ht-ErR"/>
                 <constraint firstItem="tsX-4X-l3x" firstAttribute="top" secondItem="jQh-xb-3Um" secondAttribute="bottom" constant="2" id="6Sf-nQ-PqQ"/>
                 <constraint firstItem="zpG-pA-Hxi" firstAttribute="trailing" secondItem="xvV-3J-zG8" secondAttribute="trailing" constant="-9" id="7nO-OX-6Uy"/>
                 <constraint firstItem="jQh-xb-3Um" firstAttribute="top" secondItem="4I4-l2-V2N" secondAttribute="bottom" constant="2" id="83E-K0-Hrf"/>
-                <constraint firstItem="xvV-3J-zG8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="9qn-o5-Sju"/>
-                <constraint firstItem="xvV-3J-zG8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="B2H-hQ-tOS"/>
-                <constraint firstItem="Q3v-qh-Css" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Bma-Rg-PWI"/>
+                <constraint firstItem="xvV-3J-zG8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9qn-o5-Sju"/>
+                <constraint firstItem="xvV-3J-zG8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="B2H-hQ-tOS"/>
+                <constraint firstItem="Q3v-qh-Css" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="Bma-Rg-PWI"/>
                 <constraint firstItem="0D2-FQ-4Nu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Dc4-Vi-b68"/>
                 <constraint firstItem="4I4-l2-V2N" firstAttribute="top" secondItem="xvV-3J-zG8" secondAttribute="bottom" constant="5" id="FxK-l2-WNY"/>
                 <constraint firstItem="6AR-G1-okY" firstAttribute="top" secondItem="jQh-xb-3Um" secondAttribute="bottom" constant="2" id="Iz1-x7-Z0z"/>
-                <constraint firstAttribute="trailing" secondItem="xvV-3J-zG8" secondAttribute="trailing" constant="10" id="QAA-iC-9xt"/>
-                <constraint firstItem="fwg-4r-Hc0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="UZr-wR-Ut4"/>
+                <constraint firstAttribute="trailing" secondItem="xvV-3J-zG8" secondAttribute="trailing" constant="5" id="QAA-iC-9xt"/>
+                <constraint firstItem="fwg-4r-Hc0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="UZr-wR-Ut4"/>
                 <constraint firstItem="Q3v-qh-Css" firstAttribute="top" secondItem="fwg-4r-Hc0" secondAttribute="bottom" constant="2" id="VzK-bc-HJp"/>
                 <constraint firstAttribute="bottom" secondItem="0D2-FQ-4Nu" secondAttribute="bottom" id="aCH-5r-onT"/>
-                <constraint firstAttribute="trailing" secondItem="8gc-nv-I7H" secondAttribute="trailing" constant="10" id="f5r-bF-16B"/>
+                <constraint firstAttribute="trailing" secondItem="8gc-nv-I7H" secondAttribute="trailing" constant="5" id="f5r-bF-16B"/>
                 <constraint firstItem="6AR-G1-okY" firstAttribute="leading" secondItem="tsX-4X-l3x" secondAttribute="trailing" constant="2" id="k3m-kS-zYL"/>
                 <constraint firstItem="0D2-FQ-4Nu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lyz-Z2-mpa"/>
                 <constraint firstItem="MzU-eF-Uzt" firstAttribute="top" secondItem="fwg-4r-Hc0" secondAttribute="bottom" constant="2" id="pzt-4f-Ei0"/>
