--- a/ios/MainTab/MyInfo/PurchasedEatDeal/PurchasedEatDealViewController.xib
+++ b/ios/MainTab/MyInfo/PurchasedEatDeal/PurchasedEatDealViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PurchasedEatDealViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="goToSeeEatDeal" destination="h5a-lh-dnz" id="6Yq-A6-MID"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
