--- a/ios/MainTab/PopUp/LocationPopup/GangBukGuViewController.xib
+++ b/ios/MainTab/PopUp/LocationPopup/GangBukGuViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GangBukGuViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="Qmn-kZ-bUy" id="0Ya-OF-2t5"/>
                 <outlet property="view" destination="yHr-G9-iaz" id="hhe-1q-jSZ"/>
             </connections>
         </placeholder>
@@ -44,13 +45,30 @@
                             <state key="normal" title="적용">
                                 <color key="titleColor" red="1" green="0.99998790029999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </state>
+                            <connections>
+                                <action selector="pressedSettingLocation:" destination="-1" eventType="touchUpInside" id="oPz-w3-sen"/>
+                            </connections>
                         </button>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Qmn-kZ-bUy">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ggS-kd-e5a">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="Qmn-kZ-bUy" firstAttribute="leading" secondItem="xzt-Ge-85D" secondAttribute="leading" id="8MD-nl-pos"/>
+                        <constraint firstAttribute="trailing" secondItem="Qmn-kZ-bUy" secondAttribute="trailing" id="Ark-Vd-wsm"/>
                         <constraint firstItem="itO-TK-qDD" firstAttribute="centerX" secondItem="xzt-Ge-85D" secondAttribute="centerX" id="DqE-qK-Rjw"/>
+                        <constraint firstItem="Qmn-kZ-bUy" firstAttribute="top" secondItem="xzt-Ge-85D" secondAttribute="top" id="FjP-gP-CQg"/>
                         <constraint firstAttribute="height" constant="360" id="GvF-cb-ZS9"/>
                         <constraint firstAttribute="bottom" secondItem="Pi4-bf-21Q" secondAttribute="bottom" constant="34" id="Z6M-mO-nCj"/>
+                        <constraint firstItem="itO-TK-qDD" firstAttribute="top" secondItem="Qmn-kZ-bUy" secondAttribute="bottom" id="ZxF-5D-TT8"/>
                         <constraint firstAttribute="bottom" secondItem="itO-TK-qDD" secondAttribute="bottom" constant="33" id="brc-Cw-eaS"/>
                         <constraint firstItem="Pi4-bf-21Q" firstAttribute="leading" secondItem="itO-TK-qDD" secondAttribute="trailing" constant="98.5" id="gA0-tC-TJl"/>
                         <constraint firstAttribute="trailing" secondItem="Pi4-bf-21Q" secondAttribute="trailing" constant="20" id="iud-yJ-6sp"/>
