--- a/ios/MainTab/PopUp/LocationPopup/NearCollectionViewCell.xib
+++ b/ios/MainTab/PopUp/LocationPopup/NearCollectionViewCell.xib
@@ -10,44 +10,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="GangNamGuCollectionViewCell" reuseIdentifier="GangNamGuCollectionViewCell" id="gTV-IL-0wX" customClass="GangNamGuCollectionViewCell" customModule="ios" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="NearCollectionViewCell" reuseIdentifier="NearCollectionViewCell" id="l8Y-xU-KuM" customClass="NearCollectionViewCell" customModule="ios" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ESv-Nx-499">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fcF-td-CFb">
                         <rect key="frame" x="15" y="10" width="120" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="nTY-jP-hlA"/>
-                            <constraint firstAttribute="width" constant="120" id="taN-zK-a3x"/>
+                            <constraint firstAttribute="height" constant="30" id="8qU-aJ-nZD"/>
+                            <constraint firstAttribute="width" constant="120" id="CjS-Ts-1gd"/>
                         </constraints>
                         <state key="normal" title="Button" image="ic_locationButton_gray">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                         <connections>
-                            <action selector="changeGangNamRegionColor:" destination="gTV-IL-0wX" eventType="touchUpInside" id="L6l-hg-URl"/>
+                            <action selector="changeNearRegionColor:" destination="l8Y-xU-KuM" eventType="touchUpInside" id="AXy-Dz-c2b"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edr-Hd-fbh">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNp-tN-Yvv">
                         <rect key="frame" x="55" y="15" width="40" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="ESv-Nx-499" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="06M-j9-6LK"/>
-                <constraint firstItem="edr-Hd-fbh" firstAttribute="centerY" secondItem="ESv-Nx-499" secondAttribute="centerY" id="0VF-vd-Emk"/>
-                <constraint firstItem="edr-Hd-fbh" firstAttribute="centerX" secondItem="ESv-Nx-499" secondAttribute="centerX" id="G61-jY-Qad"/>
-                <constraint firstItem="ESv-Nx-499" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="ycl-bR-GWi"/>
+                <constraint firstItem="fcF-td-CFb" firstAttribute="centerX" secondItem="l8Y-xU-KuM" secondAttribute="centerX" id="DDS-q6-KjM"/>
+                <constraint firstItem="fcF-td-CFb" firstAttribute="centerY" secondItem="l8Y-xU-KuM" secondAttribute="centerY" id="GQC-6f-ZT8"/>
+                <constraint firstItem="CNp-tN-Yvv" firstAttribute="centerX" secondItem="fcF-td-CFb" secondAttribute="centerX" id="HWe-G5-9Ds"/>
+                <constraint firstItem="CNp-tN-Yvv" firstAttribute="centerY" secondItem="fcF-td-CFb" secondAttribute="centerY" id="Kn8-Bx-18U"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="uKV-Ua-ZWy"/>
             <connections>
-                <outlet property="dongInGangNamGuButton" destination="ESv-Nx-499" id="6Ac-VA-Qj4"/>
-                <outlet property="dongInGangNamGuLabel" destination="edr-Hd-fbh" id="gCF-tC-kOt"/>
+                <outlet property="nearButton" destination="fcF-td-CFb" id="pIu-I6-ojo"/>
+                <outlet property="nearLabel" destination="CNp-tN-Yvv" id="ImW-ID-5oz"/>
             </connections>
             <point key="canvasLocation" x="111.59420289855073" y="61.607142857142854"/>
         </collectionViewCell>
